<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>DontForget</groupId>
	<artifactId>DontForget</artifactId>
	<version>0.6.9</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>src</testSourceDirectory>
		<plugins>
		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>main.App</mainClass>
						</transformer>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
							<resource>META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports</resource>
						</transformer>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
							<resource>META-INF/spring.factories</resource>
						</transformer>
					</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.vafer</groupId>
				<artifactId>jdeb</artifactId>
				<version>1.11</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jdeb</goal>
						</goals>
						<configuration>
							<dataSet>
								<data>
									<src>src/deb/bin/dontforget</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/bin</prefix>
										<filemode>755</filemode>
									</mapper>
								</data>

								<data>
									<src>
										${project.build.directory}/${project.build.finalName}.jar</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/DontForget</prefix>
									</mapper>
								</data>

								<data>
									<src>
										${project.basedir}/src/main/resources/db</src>
									<type>directory</type>
									<mapper>
										<type>perm</type>
										<prefix>
											/usr/share/${project.artifactId}/db</prefix>
										<user>root</user>
										<group>root</group>
										<filemode>644</filemode>
										<dirmode>755</dirmode>
									</mapper>
								</data>

								<data>
									<src>${basedir}/src/deb/DontForget.desktop</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/applications</prefix>
										<filemode>644</filemode>
									</mapper>
								</data>
							</dataSet>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>26</release>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<excludes>
								<exclude>test/**</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.6.0-M1</version>
				<configuration>
					<!-- Suppress jansi native-access WARNING on Java 21+ -->
					<argLine>--enable-native-access=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>





		<!-- Source:
		https://mvnrepository.com/artifact/com.formdev/flatlaf-extras -->
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-extras</artifactId>
			<version>3.7.1</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.7</version>
		</dependency>
		
		<!-- Source: https://mvnrepository.com/artifact/com.github.lgooddatepicker/LGoodDatePicker -->
		<dependency>
		    <groupId>com.github.lgooddatepicker</groupId>
		    <artifactId>LGoodDatePicker</artifactId>
		    <version>11.2.1</version>
		    <scope>compile</scope>
		</dependency>

		<!-- Source: https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.4.240</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<version>4.0.6</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.21.0</version>
		</dependency>

		<!-- Source:
		https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>4.0.6</version>
		</dependency>
		
				<!-- Source:
		https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>4.0.6</version>
		</dependency>

		<!-- Source:
		https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.23.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>6.1.1</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>4.0.6</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<version>4.0.6</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>